--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@ function getArtist() {
 					'<div class="trackContainer col-lg-6 col-sm-12 col-12">' +
             '<div class="trackInnerContainer">' +
               '<div class="trackIcon">' +
-                '<img src="/assets/img/icon-track.jpg" alt="Track Icon" /></a>' +
+                '<img src="https://jky.graphics/UMG/assets/img/icon-track.jpg" alt="Track Icon" /></a>' +
               '</div>' +
               '<div class="trackDesc">' +
                 '<a href="' +
