Commit after change all image reference to jky.graphics/UMG/

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@ function getArtist() {
 					'<div class="trackContainer col-lg-6 col-sm-12 col-12">' +
             '<div class="trackInnerContainer">' +
               '<div class="trackIcon">' +
-                '<img src="/assets/img/icon-track.jpg" alt="Track Icon" /></a>' +
+                '<img src="https://jky.graphics/UMG/assets/img/icon-track.jpg" alt="Track Icon" /></a>' +
               '</div>' +
               '<div class="trackDesc">' +
                 '<a href="' +
@@ -172,7 +172,7 @@ entradas => {
 
 
 
-// Crea un nuevo elemento HTML
+//  Create a new HTML element
 function createNewElement() {
   const elem = document.createElement("div");
   const height = rngInteger(200, 400);
@@ -188,7 +188,6 @@ function createNewElement() {
   return elem;
 }
 
-// Funcion inicial
 (function () {
   const masonry = document.getElementById("masonry");
   for (let i = 0; i < 10; i++) {if (window.CP.shouldStopExecution(0)) break;
